--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -65,7 +65,7 @@
                 <div class="services-box">
                     <i class='bx bx-crop' ></i>
                     <h3>UI/UX Design</h3>
-                    <p>You cannot make a good design if you do not understand people; design is made for people.</p>
+                    <p>With my UI/UX design skills, I create visually appealing, user-friendly interfaces focused on intuitive navigation and responsiveness. I ensure seamless interactions to enhance the overall user experience.</p>
                     <a href="#"class="btn">Read More</a>
                 </div>
             
@@ -93,7 +93,7 @@
                     <img src="image/chat1.jpg"alt="">
                     <div class="portfolio-layer">
                         <h4>Real Time Chat Application</h4>
-                        <p>In this project I try detect the iris flower type by using machine learning predication model.And deployed in streamlit python</p>
+                        <p>In this project, I developed a real-time chat application using Node.js and Socket.IO, enabling instant messaging between users. It includes message broadcasting, user authentication, and MongoDB for storing chat history, creating a seamless and interactive chat experience.</p>
                         <a href="#"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                     <img src="image/game2.jpg"alt="">
                     <div class="portfolio-layer">
                         <h4>Endless Runner</h4>
-                        <p>In this project I try deployed dynamics website in AWS.so that we can add deleted the data by connecting to databases.</p>
+                        <p>In this project, I developed an Endless Runner game using Unity and C#. The game features a continuously moving character that dodges obstacles and collects points. I implemented smooth animations, random obstacle generation, and score tracking to enhance player engagement and overall gameplay experience.</p>
                         <a href="#"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
